Add support for nss-resolve, -mymachines, -myhostname
See also
https://www.freedesktop.org/software/systemd/man/libnss_resolve.so.2.html
https://www.freedesktop.org/software/systemd/man/libnss_mymachines.so.2.html
https://www.freedesktop.org/software/systemd/man/libnss_myhostname.so.2.html

Signed-off-by: Andreas K. Hüttel <dilfridge@gentoo.org>

--- a/gentoo-config/nsswitch.conf
+++ b/gentoo-config/nsswitch.conf
@@ -58,11 +58,12 @@
 # See also https://bugs.gentoo.org/773436
 
 # In alphabetical order. Re-order as required to optimize peformance.
+
 aliases:    files
 ethers:     files
 group:      files [SUCCESS=merge] systemd
 gshadow:    files systemd
-hosts:      files dns
+hosts:      mymachines resolve [!UNAVAIL=return] files myhostname dns
 # Allow initgroups to default to the setting for group.
 # initgroups: files
 netgroup:   files
