--- a/gentoo-config/nsswitch.conf
+++ b/gentoo-config/nsswitch.conf
@@ -63,7 +63,7 @@ aliases:    files
 ethers:     files
 group:      files [SUCCESS=merge] systemd
 gshadow:    files systemd
-hosts:      mymachines resolve [!UNAVAIL=return] files myhostname dns
+hosts:      mymachines files myhostname dns
 # Allow initgroups to default to the setting for group.
 # initgroups: files
 netgroup:   files
