Return immediately if libnss_files cannot open /etc/shadow
This restores the EACCES errno value that is expected by pam_unix in
>=sys-libs/pam-1.5.2.

Bug: https://bugs.gentoo.org/803050
Signed-off-by: Mike Gilbert <floppym@gentoo.org>
Signed-off-by: Andreas K. Hüttel <dilfridge@gentoo.org>

--- a/gentoo-config/nsswitch.conf
+++ b/gentoo-config/nsswitch.conf
@@ -72,5 +72,5 @@ passwd:     files systemd
 protocols:  files
 publickey:  files
 rpc:        files
-shadow:     files systemd
+shadow:     files [UNAVAIL=return] systemd
 services:   files
